--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "build:css": "npx @tailwindcss/cli -i styles.css -o dist/chatbot-widget.css --minify --content \"./index.html\" --content \"./chatbot-widget.js\"",
-    "watch:css": "npx @tailwindcss/cli -i styles.css -o dist/chatbot-widget.css --watch --content \"./index.html\" --content \"./chatbot-widget.js\"",
+    "build:css": "npx @tailwindcss/cli -i src/styles.css -o dist/chatbot-widget.css --minify --content \"src/index.html\" --content \"src/chatbot-widget.js\"",
+    "watch:css": "npx @tailwindcss/cli -i src/styles.css -o dist/chatbot-widget.css --watch --content \"src/index.html\" --content \"src/chatbot-widget.js\"",
     "serve": "serve . -l 3000"
   },
   "devDependencies": {
