Load marked and MathJax in the chatbot js

--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "scripts": {
+    "serve": "serve . -l 3000",
+    "build": "npm run build:css && npm run build:js",
     "build:css": "npx @tailwindcss/cli -i src/styles.css -o dist/chatbot-widget.css --minify --content \"src/index.html\" --content \"src/chatbot-widget.js\"",
     "watch:css": "npx @tailwindcss/cli -i src/styles.css -o dist/chatbot-widget.css --watch --content \"src/index.html\" --content \"src/chatbot-widget.js\"",
-    "serve": "serve . -l 3000"
+    "build:js": "terser src/chatbot-widget.js --compress --mangle --output dist/chatbot-widget.min.js"
   },
   "devDependencies": {
-    "tailwindcss": "^4.1.7",
     "@tailwindcss/cli": "^4.1.7",
-    "serve": "^14.2.4"
+    "serve": "^14.2.4",
+    "tailwindcss": "^4.1.7",
+    "terser": "^5.39.2"
   }
 }
